welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: ')' expected but '}' found.
}
^SnakeBuggle:14: error: ':' expected but ')' found.
def finTest(Boolean)={
                   ^SnakeBuggle:20: error: identifier expected but '}' found.
}
^